# GraphAPI

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  PROJECT_CONTEXT.md  README.md  RELEASE.md  SECURITY.md  SESSION_NOTES.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  main.py  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: ai_task.md  bug_report.yml  config.yml
.github/workflows/: ci.yml  gitleaks.yml  release.yml  test.yml
docs/: openapi.v2.iconsets.draft.yaml
src/graphapi/: __init__.py  __main__.py  app.py  graph_type_contract.py  graphtype_defaults.py  graphtype_store.py  health.py  iconset_defaults.py  iconset_store.py  layoutset_defaults.py  layoutset_store.py  linkset_defaults.py  linkset_store.py  profile_contract.py  profile_defaults.py  profile_store.py  profile_v2_contract.py  profile_v2_defaults.py  profile_v2_store.py  property_catalog.py  property_catalog_contract.py  theme_defaults.py  theme_store.py
tests/: conftest.py  test_app_additional.py  test_health.py  test_main_entrypoint.py  test_profile_store.py  test_profiles.py  test_property_catalog.py  test_schema_migrations.py  test_smoke.py  test_theme_contract.py  test_themes.py
tests/integration/: conftest.py  test_health.py  test_smoke.py  test_smoke_integration.py
