[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-repo-template"
version = "0.1.0"
description = "Template boilerplate for public Python repositories."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "Faerkeren" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Faerkeren/python-repo-template"
Repository = "https://github.com/Faerkeren/python-repo-template"
Issues = "https://github.com/Faerkeren/python-repo-template/issues"
Changelog = "https://github.com/Faerkeren/python-repo-template/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
python-repo-template = "samplepkg.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
