[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GraphAPI"
version = "0.1.0"
description = "Orchestrates the GraphRapids pipeline and exposes functionality via HTTP/WebSocket"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "GraphLoom @ git+https://github.com/GraphRapids/GraphLoom.git",
    "GraphRender @ git+https://github.com/GraphRapids/GraphRender.git",
]
authors = [
    { name = "Faerkeren" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/GraphRapids/GraphAPI"
Repository = "https://github.com/GraphRapids/GraphAPI"
Issues = "https://github.com/GraphRapids/GraphAPI/issues"
Changelog = "https://github.com/GraphRapids/GraphAPI/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]
themes = [
    "GraphTheme>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
graphapi = "graphapi.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
